--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
       ["@babel/env"]
     ],
     "plugins": [
+        "@babel/plugin-transform-runtime",
         "@babel/plugin-syntax-class-properties"
       ]
   }
