--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "@babel/plugin-syntax-class-properties": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
+    "@babel/runtime": "^7.3.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-jest": "^24.1.0",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0",
     "jsdoc-to-markdown": "^4.0.1",
     "regenerator-runtime": "^0.13.1",
     "rollup": "^1.0.0",
-    "rollup-plugin-babel": "^4.2.0",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-uglify": "^6.0.0",
