--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "rollup -c -w",
     "pretest": "npm run build",
     "test": "jest",
+    "docs": "jsdoc2md src/*.js > api.md",
     "test:c": "jest --coverage",
     "debugger": "node --inspect-brk ./node_modules/jest/bin/jest --runInBand --no-cache --no-watchman"
   },
