--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "yarn test",
-      "pre-push": "npm test"
+      "pre-push": " "
     }
   },
   "keywords": [
